--- a/tools/template/area.template
+++ b/tools/template/area.template
@@ -1,16 +1,7 @@
-var base = +new Date(1968, 9, 3);
-var oneDay = 24 * 3600 * 1000;
-var date = [];
-
-var data = [Math.random() * 300];
-
-for (var i = 1; i < 20000; i++) {
-    var now = new Date(base += oneDay);
-    date.push([now.getFullYear(), now.getMonth() + 1, now.getDate()].join('/'));
-    data.push(Math.round((Math.random() - 0.5) * 20 + data[i - 1]));
-}
-
 option = {
+    backgroundColor: '#ffffff',
+    animation: false, // save image...
+
     tooltip: {
         trigger: 'axis',
         position: function (pt) {
@@ -19,46 +10,22 @@ option = {
     },
     title: {
         left: 'center',
-        text: '大数据量面积图',
+        text: '面积图',
     },
-    toolbox: {
-        feature: {
-            dataZoom: {
-                yAxisIndex: 'none'
-            },
-            restore: {},
-            saveAsImage: {}
-        }
-    },
+    
     xAxis: {
         type: 'category',
         boundaryGap: false,
-        data: date
+        data: PARAM0 //['a','b','c']
     },
     yAxis: {
         type: 'value',
         boundaryGap: [0, '100%']
     },
-    dataZoom: [{
-        type: 'inside',
-        start: 0,
-        end: 10
-    }, {
-        start: 0,
-        end: 10,
-        handleIcon: 'M10.7,11.9v-1.3H9.3v1.3c-4.9,0.3-8.8,4.4-8.8,9.4c0,5,3.9,9.1,8.8,9.4v1.3h1.3v-1.3c4.9-0.3,8.8-4.4,8.8-9.4C19.5,16.3,15.6,12.2,10.7,11.9z M13.3,24.4H6.7V23h6.6V24.4z M13.3,19.6H6.7v-1.4h6.6V19.6z',
-        handleSize: '80%',
-        handleStyle: {
-            color: '#fff',
-            shadowBlur: 3,
-            shadowColor: 'rgba(0, 0, 0, 0.6)',
-            shadowOffsetX: 2,
-            shadowOffsetY: 2
-        }
-    }],
+    
     series: [
         {
-            name:'模拟数据',
+            name:'数据',
             type:'line',
             smooth:true,
             symbol: 'none',
@@ -79,7 +46,9 @@ option = {
                     }])
                 }
             },
-            data: data
+            data: [
+                PAMAM1 //['a',20],['b',50],['c',40],
+                ]
         }
     ]
 };
