--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ tools/output/cx1/网络数据/wl_gyzs.png
 tools/output/cx1/网络数据/供应指数_out.csv
 tools/output/cx1/网络数据/独立车商_out.csv
 tools/output/cx1/网络数据/电商top100_out.csv
+server/public/liuxiang/bd_top50.png
+server/public/liuxiang/bd_top50.png
+server/public/liuxiang/clfb.png
+server/public/liuxiang/plfb.png
