--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,37 @@ server/public/liuxiang/bd_top50.png
 server/public/liuxiang/bd_top50.png
 server/public/liuxiang/clfb.png
 server/public/liuxiang/plfb.png
+tools/流向处理/csv/外迁TOP1_out.csv
+tools/流向处理/csv/外迁TOP2_out.csv
+tools/流向处理/csv/外迁TOP3_out.csv
+tools/流向处理/csv/外迁TOP4_out.csv
+tools/流向处理/csv/外迁TOP50城市_out.csv
+tools/流向处理/csv/外迁TOP5_out.csv
+tools/流向处理/csv/排量发布_out.csv
+tools/流向处理/csv/本地交易TOP50城市_out.csv
+tools/周转天数/csv/车源周转天数表_out.csv
+tools/流向处理/csv/流向统计_out.csv
+tools/流向处理/csv/车龄发布_out.csv
+tools/网络数据/csv/4s_out.csv
+tools/网络数据/csv/供应指数_out.csv
+tools/网络数据/csv/独立车商_out.csv
+tools/网络数据/csv/电商top100_out.csv
+tools/周转天数/csv/车系价格波动表_out.csv
+tools/周转天数/csv/车系周转天数表_out.csv
+server/public/wangluoshuju/wl_4s.png
+server/public/wangluoshuju/wl_dlcs.png
+server/public/liuxiang/w_t1_1.png
+server/public/liuxiang/w_t1_2.png
+server/public/wangluoshuju/wl_dstop100.png
+server/public/liuxiang/w_t2_1.png
+server/public/liuxiang/w_t2_2.png
+server/public/liuxiang/w_t3_1.png
+server/public/liuxiang/w_t3_2.png
+server/public/liuxiang/w_t4_1.png
+server/public/liuxiang/w_t4_2.png
+server/public/liuxiang/w_t5_1.png
+server/public/wangluoshuju/wl_gyzs.png
+server/public/liuxiang/w_t5_2.png
+server/public/liuxiang/w_top50.png
+server/public/zhouzhuantianshu/zzts_cxzzts.png
+server/public/zhouzhuantianshu/zzts_jgbd.png
