--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,7 @@ server/public/liuxiang/w_t5_2.png
 server/public/liuxiang/w_top50.png
 server/public/zhouzhuantianshu/zzts_cxzzts.png
 server/public/zhouzhuantianshu/zzts_jgbd.png
+server/public/my_js/zzts_cxzzts.js
+server/public/my_js/zzts_cxzzts.js
+server/public/my_js/zzts_cxzzts.js
+server/public/my_js/zzts_cxzzts.js
