--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ server/public/my_js/zzts_cxzzts.js
 server/public/my_js/zzts_cxzzts.js
 server/public/my_js/zzts_cxzzts.js
 server/public/my_js/zzts_cxzzts.js
+tools/output/'凯越'/周转天数/in_原始数据.csv
