--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,20 @@ server/public/my_js/bd_top50.js
 tools/周转天数/csv/in_原始数据.csv
 tools/流向处理/csv/in_原始数据.csv
 tools/网络数据/csv/in_原始数据.csv
+server/public/my_js/clfb.js
+server/public/my_js/plfb.js
+server/public/my_js/w_t1_2.js
+server/public/my_js/w_t1_1.js
+server/public/my_js/w_t2_1.js
+server/public/my_js/w_t2_2.js
+server/public/my_js/w_t3_1.js
+server/public/my_js/w_t3_2.js
+server/public/my_js/w_t4_1.js
+server/public/my_js/w_t4_2.js
+server/public/my_js/w_t5_1.js
+server/public/my_js/w_t5_2.js
+server/public/my_js/w_top50.js
+server/public/my_js/wl_4s.js
+server/public/my_js/wl_dlcs.js
+server/public/my_js/wl_dstop100.js
+server/public/my_js/wl_gyzs.js
