--- a/tools/template/bar.template
+++ b/tools/template/bar.template
@@ -36,7 +36,7 @@ option = {
     ],
     series : [
         {
-            name:'直接访问',
+            name:'',
             type:'bar',
             barWidth: '60%',
             data:PARAM1  //[a,b]
