--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ tools/output/宝马5系/流向处理/in_原始数据.csv
 tools/output/宝马5系/流向处理/外迁TOP1_out.csv
 tools/output/*
 server/public/my_js/*
+tools/office/15w_1708.xlsx
