--- a/tools/template/ring.template
+++ b/tools/template/ring.template
@@ -6,6 +6,7 @@ option = {
     legend: {
         orient: 'vertical',
         x: 'left',
+        y: 'center', 
         data:  PARAM0 //['1.5L','1.6L','1.8L']
     },
     
