--- a/tools/template/area.template
+++ b/tools/template/area.template
@@ -35,17 +35,17 @@ option = {
             sampling: 'average',
             itemStyle: {
                 normal: {
-                    color: 'rgb(255, 70, 131)'
+                    color: 'PARAM4' //'rgb(255, 70, 131)'
                 }
             },
             areaStyle: {
                 normal: {
                     color: new echarts.graphic.LinearGradient(0, 0, 0, 1, [{
                         offset: 0,
-                        color: 'rgb(255, 158, 68)'
+                        color: 'PARAM2' //'rgb(255, 158, 68)'
                     }, {
                         offset: 1,
-                        color: 'rgb(255, 70, 131)'
+                        color: 'PARAM3' //'rgb(255, 70, 131)'
                     }])
                 }
             },
