--- a/tools/template/buble.template
+++ b/tools/template/buble.template
@@ -24,7 +24,7 @@ option = {
         scale: true
     },
     series: [{
-        name: '1990',
+        name: '--',
         data: data[0],
         type: 'scatter',
         symbolSize: function (data) {
@@ -46,42 +46,13 @@ option = {
                 shadowOffsetY: 5,
                 color: new echarts.graphic.RadialGradient(0.4, 0.3, 1, [{
                     offset: 0,
-                    color: 'rgb(129, 227, 238)'
+                    color: 'PARAM1' //'rgb(129, 227, 238)'
                 }, {
                     offset: 1,
-                    color: 'rgb(25, 183, 207)'
+                    color: 'PARAM2' //'rgb(25, 183, 207)'
                 }])
             }
         }
-    }, {
-        name: '2015',
-        data: data[1],
-        type: 'scatter',
-        symbolSize: function (data) {
-            return Math.sqrt(data[2]) / 5e2;
-        },
-        label: {
-            emphasis: {
-                show: true,
-                formatter: function (param) {
-                    return param.data[3];
-                },
-                position: 'top'
-            }
-        },
-        itemStyle: {
-            normal: {
-                shadowBlur: 10,
-                shadowColor: 'rgba(25, 100, 150, 0.5)',
-                shadowOffsetY: 5,
-                color: new echarts.graphic.RadialGradient(0.4, 0.3, 1, [{
-                    offset: 0,
-                    color: 'rgb(129, 227, 238)'
-                }, {
-                    offset: 1,
-                    color: 'rgb(25, 183, 207)'
-                }])
-            }
-        }
-    }]
+    }
+    ]
 };
